--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,239 @@ h1 {
   font-weight: normal;
   font-style: normal; }
 
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 40px 80px; }
+  .header__scroll {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+
+.icon {
+  padding: 0 7px; }
+
+@media screen and (max-width: 999px) {
+  .header__scroll {
+    overflow-x: scroll; } }
+
+.button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+#preloader {
+  text-align: center;
+  padding: 15px;
+  border: none;
+  font-family: inherit;
+  font-weight: 700;
+  background-color: white;
+  cursor: pointer;
+  width: 150px;
+  outline: none;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-transition-duration: 3s;
+          transition-duration: 3s; }
+  #preloader:hover {
+    background-color: inherit;
+    border: 2px solid white; }
+
+#content {
+  display: none;
+  margin-top: 50px;
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+  width: 400px; }
+
+.tabs {
+  margin: 40px 50px;
+  background-color: #5c5c5c;
+  border-radius: 10px; }
+
+.tab {
+  display: inline-block;
+  background-color: white;
+  margin: 20px 40px 50px;
+  width: 150px;
+  height: 30px;
+  font-weight: 700;
+  padding-top: 10px;
+  text-align: center;
+  border-radius: 10px;
+  cursor: pointer; }
+
+.active {
+  color: #6969ec;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.8); }
+
+.content-tab {
+  display: none;
+  padding: 10px;
+  color: white;
+  margin-left: 10px; }
+
+.tabs_body {
+  position: relative;
+  top: -1px;
+  z-index: 1; }
+
+.headerTab {
+  position: relative;
+  z-index: 2; }
+
+.popover {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 100px; }
+
+.modal_content {
+  position: relative;
+  margin: auto;
+  padding: 0;
+  background-color: #bebaba;
+  width: 300px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: anim;
+          animation-name: anim;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s; }
+
+#myModal {
+  display: none; }
+
+.modal-header {
+  padding: 2px 16px;
+  color: white; }
+
+.modal_body {
+  padding: 15px; }
+
+#popover_button {
+  margin: 0 auto;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+  outline: none; }
+  #popover_button:hover {
+    background-color: #fcfcfc; }
+
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold; }
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer; }
+
+@-webkit-keyframes anim {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes anim {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+.block_words {
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .block_words_item {
+    font-size: 20px;
+    padding-left: 10px; }
+    .block_words_item:nth-child(2n) {
+      color: blue; }
+
+.box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  height: 600px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .box__one {
+    width: 200px;
+    height: 400px;
+    background-color: royalblue; }
+  .box__two {
+    width: 400px;
+    height: 200px;
+    background-color: salmon; }
+
+.box > *:first-child {
+  -ms-flex-item-align: stretch;
+      align-self: stretch; }
+
+.box .selected {
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 400px;
+  height: 200px;
+  background-color: salmon; }
+
+.timer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+#doc_time {
+  color: black;
+  font-size: 26px; }
+
 body {
   background: #eee; }
 
