--- a/src/styles/_popover.scss
+++ b/src/styles/_popover.scss
@@ -11,14 +11,10 @@
   padding: 0;
   background-color: rgb(190, 186, 186);
   width: 300px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: anim;
-  animation-duration: 0.5s
+  animation-duration: 0.5s;
 }
-
-
-
-
 
 #myModal {
   display: none;
@@ -47,8 +43,6 @@
   }
 }
 
-
-
 .close {
   color: white;
   float: right;
@@ -58,13 +52,16 @@
 
 .close:hover,
 .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 @keyframes anim {
-  from { opacity:0}
-  to { opacity:1}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-
