--- a/styles/main.css
+++ b/styles/main.css
@@ -74,7 +74,7 @@ h1 {
   width: 400px; }
 
 .tabs {
-  margin: 40px 50px;
+  margin: 40px 80px;
   background-color: #5c5c5c;
   border-radius: 10px; }
 
@@ -106,7 +106,8 @@ h1 {
   top: -1px;
   z-index: 1; }
 
-.headerTab {
+.tab_header {
+  left: 30px;
   position: relative;
   z-index: 2; }
 
